--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import-normalize;
-
+@import "helper";
 *{margin: 0;padding: 0}
 ul,ol{
   list-style:none
@@ -11,3 +11,8 @@ a{
   text-decoration: none;
   color: inherit;
 }
+body{
+  font-family: $font-hei;
+  font-size: 16px;
+  line-height: 1.2;
+  }
