--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,11 @@ body{
   font-family: $font-hei;
   font-size: 16px;
   line-height: 1.2;
+  background: #f4f4f4;
   }
+button{
+  font-family: inherit;
+}
 .icon{
   width:1em;
   height:1em;
