7-3:Tag.tsx的样式完成

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,8 +17,8 @@ body{
   line-height: 1.2;
   background: #f4f4f4;
   }
-button{
-  font-family: inherit;
+button,input{
+  font: inherit;
 }
 .icon{
   width:1em;
